crates/strider-analyze/tests/snapshots/mips64le__floats__f32_arith.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="Or:u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0xffffffff:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="Div:f32", shape=box, fillcolor="#1a3020"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:f32", shape=box, fillcolor="#1a3020"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "17" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "3" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0xf74:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "3" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "3" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "3" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x100000000000102c0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="init\nt9", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "23" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="init\nregister[0x1060]:4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="Add:f32", shape=box, fillcolor="#1a3020"];
  "24" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="Neg\nf32 → f32", shape=box, fillcolor="#1a3020"];
  "26" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="init\nregister[0x1068]:4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="Mul:f32", shape=box, fillcolor="#1a3020"];
  "28" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="Add:f32", shape=box, fillcolor="#1a3020"];
  "15" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "7" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "29" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0xffffffff00000000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x10000000000018280:u64", shape=ellipse, fillcolor="#2d2d2d"];
}
